feat: 新增问题数，问题列表接口
